# ferx-core

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SDLC.md  SECURITY.md  build.rs  codecov.yml  rust-toolchain.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
data/: bioavailability.csv  bioavailability_ode_ref.csv  bioavailability_oral.csv  biphasic_ig_oral.csv  correlated_residual_combined.csv  datsim_oral.csv  dose_rate.csv  emax_pkpd.csv  first_order_alag.csv  fluconazole_free_total.csv  igd_oral.csv  mixed_oral.csv  mm_iv.csv  modeled_duration_addl_ref.csv  modeled_duration_ref.csv  modeled_rate_addl_ref.csv  modeled_rate_ref.csv  one_cpt_infusion.csv  one_cpt_iv.csv  one_cpt_oral_lagtime.csv  parallel_oral.csv  pkpd_nonmem.csv  pktte_joint.csv  reset_iv_washout.csv  rtte_exponential.csv  rtte_weibull_reset.csv  schnider_propofol.csv  ss_oral_lagtime.csv  ss_oral_q24.csv  three_cpt_iv.csv  transit_2cpt.csv  tte_competing_risks.csv  tte_exponential.csv  tte_gompertz.csv  tte_weibull.csv  tvcov_oral_wt.csv  two_cmt_dose_ref.csv  warfarin_additive_eta.csv  warfarin_addl.csv  warfarin_bloq.csv  (+5 more)
docs/: _brand.yml  _quarto.yml  book.toml  cli.qmd  data-format.qmd  faq.qmd  getting-started.qmd  maturity.qmd  output.qmd  quick-start.qmd  styles.css
examples/: adaptive_platelet_ladder.ferx  adaptive_tdm_titration.ferx  adaptive_vanco_auc.ferx  adaptive_vanco_iov.ferx  adaptive_vanco_renal.ferx  adaptive_vanco_renal_iov.ferx  bioavailability.ferx  bioavailability_ode.ferx  biphasic_igd_absorption.ferx  correlated_residual_combined.ferx  dose_rate.ferx  emax_pkpd.ferx  fluconazole_free_total_analytic.ferx  igd_inverse_gaussian.ferx  iiv_on_ruv.ferx  mixed_absorption.ferx  mm_iv.ferx  mm_multistart.ferx  mm_oral.ferx  one_cpt_infusion.ferx  one_cpt_iv.ferx  one_cpt_iv_ode.ferx  one_cpt_iv_renamed.ferx  one_cpt_oral_baseline.ferx  one_cpt_transit.ferx  oral_with_lagtime.ferx  parallel_absorption.ferx  pkpd_nonmem.ferx  pktte_joint.ferx  rtte_exponential.ferx  rtte_weibull_reset.ferx  scaling_expression.ferx  scaling_multi_analyte.ferx  scaling_ode_amounts.ferx  scaling_scalar.ferx  schnider.ferx  sequential_absorption.ferx  ss_oral_q24.ferx  three_cpt_iv.ferx  three_cpt_iv_ode.ferx  (+50 more)
nonmem_anchor/: README.md  RUN.md  biphasic_ig_fit.ferx  biphasic_ig_oral.csv  correlated_residual_combined.ctl  first_order_alag.ctl  first_order_alag_fit.ferx  first_order_alag_nm.csv  freijer_biphasic_ig.ctl  freijer_ig.ctl  iiv_on_ruv.csv  iiv_on_ruv.ctl  iiv_on_ruv.lst  iiv_on_ruv_fit.ferx  iov_anchor.csv  iov_anchor.ctl  iov_scaling_anchor.ctl  mixed_oral.csv  mixed_zero_first.ctl  mixed_zero_first_fit.ferx  parallel_first_order.ctl  parallel_first_order_fit.ferx  parallel_oral.csv  simulate_biphasic_ig_data.py  simulate_first_order_alag.py  simulate_mixed_data.py  simulate_parallel_data.py  simulate_transit_data.py  transit_oral.csv  transit_savic_fit.ferx  weibull_absorption.ctl  weibull_absorption_fit.ferx
plans/: absorption-models.md  analytical-zero-order-depot.md  custom-residual-error-magnitude.md  data-selection.md  dcm-and-low-dim-node.md  ferx-benchmark-framework.md  ode-iov-expression-scale.md  ode-modeled-dose-ss-iov.md  ode-noniov-tvcov-combos.md  ode-sensitivities.md  optimization.md  pr-readiness-367.md  propensity-score-matched-simulation.md  rate-neg2-analytical.md  saem-mixing-robustness.md  scaling.md  sdtab-id-cmt-runlog.md  stiff-rosenbrock-solver.md  time-builtin-structural-sensitivities.md  tte-survival-markov.md  tv-covariate-sensitivities.md
src/: api.rs  build_info.rs  cancel.rs  diagnostics.rs  environment.rs  lib.rs  propensity_match.rs  types.rs
tests/: absorption_fraction_features.rs  adaptive_platelet_anchor.rs  adaptive_vanco_anchor.rs  adaptive_vanco_iov_anchor.rs  adaptive_vanco_renal_anchor.rs  adaptive_vanco_renal_iov_anchor.rs  analytical_init_equivalence.rs  analytical_ode_equivalence.rs  autodiff_fd_consistency.rs  bioavailability_ode_nonmem.rs  biphasic_igd_nonmem_anchor.rs  bloq_convergence.rs  branch_only_param_ode.rs  check_command.rs  cli_binaries.rs  coded_rate.rs  compartment_states.rs  compartment_states_nonmem.rs  covariance_fallback.rs  covariance_method_sandwich.rs  covariance_se_at_nonmem_minimum.rs  data_block.rs  (+74 more)
(+528 files in other folders)
