[package]
name = "ferx-core"
version = "0.1.0"
edition = "2021"
description = "Nonlinear Mixed Effects modeling engine with FOCE/FOCEI estimation"
license = "MIT"
authors = ["InsightRX, Inc."]
repository = "https://github.com/FeRx-NLME/ferx-core"
readme = "README.md"

[[bin]]
name = "ferx"
path = "src/bin/run_model.rs"

[features]
default = ["autodiff"]
autodiff = []
ci = []  # Allows building without autodiff for CI (nightly, no Enzyme)
# Opt-in support for neural-network-based covariate models (DCM) and
# dynamics (low-dim NODE). See `plans/dcm-and-low-dim-node.md`. No new
# runtime deps — the MLP runs on top of `nalgebra`.
nn = []
# Heavy fit-based tests (5–60 min wall each on a 2-core CI runner).
# Default `cargo test` `#[ignore]`s them; a nightly/manual job opts in.
slow-tests = []

[dependencies]
nalgebra = "0.33"
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
rayon = "1.10"
rand = "0.8"
rand_distr = "0.4"
regex = "1.11"
thiserror = "2"
nlopt = "0.8"
argmin = { version = "0.11", features = ["serde1"] }
argmin-math = { version = "0.5", features = ["nalgebra_latest"] }
tempfile = "3"
sha2 = "0.10"

[dev-dependencies]
approx = "0.5"

[profile.release]
lto = "fat"
