[package]
name = "ferx-core"
version = "0.1.6"
edition = "2021"
description = "Nonlinear Mixed Effects modeling engine with FOCE/FOCEI estimation"
license = "MIT"
authors = ["Ron Keizer", "Teun Post"]
repository = "https://github.com/FeRx-NLME/ferx-core"
readme = "README.md"

[[bin]]
name = "ferx"
path = "src/bin/run_model.rs"

[features]
default = ["autodiff"]
autodiff = []
ci = []  # Allows building without autodiff for CI (nightly, no Enzyme)
# Opt-in support for neural-network-based covariate models (DCM) and
# dynamics (low-dim NODE). See `plans/dcm-and-low-dim-node.md`. No new
# runtime deps — the MLP runs on top of `nalgebra`.
nn = []
# TTE/survival/categorical non-Gaussian endpoint support.
# Default-off while Phase 1 is in development; promoted to default-on after
# nlmixr2/NONMEM validation (see plans/tte-survival-markov.md Phase 1).
survival = []
# Heavy fit-based tests (5–60 min wall each on a 2-core CI runner).
# Default `cargo test` `#[ignore]`s them; a nightly/manual job opts in.
slow-tests = []

[dependencies]
nalgebra = "0.34"
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
rayon = "1.10"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
regex = "1.11"
thiserror = "2"
nlopt = "0.8"
argmin = { version = "0.11", features = ["serde1"] }
argmin-math = { version = "0.5", features = ["nalgebra_latest"] }
tempfile = "3"
sha2 = "0.10"

[dev-dependencies]
approx = "0.5"

[profile.release]
lto = "fat"

# Used by the CI test/coverage jobs: release-level optimisation (so the
# population-fit tests stay fast) but NO fat LTO, whose whole-program link
# dominated the Test/Survival/coverage jobs (the ~8 min Survival job was ~96%
# LTO compile, ~20 s of actual tests). The shipped `release` keeps `lto = "fat"`.
[profile.ci-test]
inherits = "release"
lto = false
